# http_server

./: Cargo.toml  Dockerfile  README.md
charts/http_server/: Chart.yaml  values.yaml
charts/http_server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/http_server/templates/tests/: test-connection.yaml
extras/: iks-deployment.yaml  simple-deployment.yaml
src/: handler.rs  main.rs
