[package]
name = "http_server"
version = "0.1.0"
authors = ["csh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
log = "0.4.17"

[dev-dependencies]
http-body-util = "0.1.0-rc.2"
bytes = "1.3.0"